1st page proto done

--- a/homePage.html
+++ b/homePage.html
@@ -24,6 +24,57 @@
                 <a class="firstLevel" id="navbarFirstLevel8">Загрузка контена</a>
             </div>
         </div>
+        <div class="page">
+            <div class="mainContent">
+                <div class="contentBlock">
+                    <h1>meile design</h1>
+                    <p>MEILE — это дизайн-система, состоящая из набора правил и готовых компонентов, <br> которая объединяет в единое целое многообразие сервисов <br>для планирования путешествий.</p>
+                </div>
+                <div class="contentBlock">
+                    <h2>Для кого</h2>
+                    <div class="manyTexts">
+                        <p>Дизайн-система планирования путешествий создана как для профессионалов<br> 
+                            в области веб-разработки, так и для начинающих специалистов и представляет инструменты и стандарты для создания удобного и функционального сервиса планирования путешествий</p>
+                        <p>Благодаря meile упрощается и ускоряется процесс работы дизайнеров<br> 
+                            и фронтенд-разработчиков.</p>
+                        <p>Данная дизайн-система предполагает разработку дизайна пользовательского интерфейса с использованием Figma и вёрстку страниц с помощью стандартных средств HTML, CSS и JavaScript.</p>
+                    </div>
+                </div>
+                <div class="contentBlock">
+                    <h2>Принципы</h2>
+                    <p>В дизайн-системе используется широкий набор визуальных приемов<br> 
+                        и различных готовых компонентов, что позволяет нашим цифровым продуктам<br> 
+                        быть не только удобными, но и привлекательными.</p>
+                    <div class="principlesBlock">
+                        <div class="principlesElement" onclick="window.location.href = '/about.html'">
+                            О дизайн системе
+                        </div>
+                        <div class="principlesElement">
+                            Цвет
+                        </div>
+                        <div class="principlesElement">
+                            Типографика
+                        </div>
+                        <div class="principlesElement">
+                            Сетка
+                        </div>
+                        <div class="principlesElement">
+                            Навигация
+                        </div>
+                        <div class="principlesElement">
+                            Компоненты
+                        </div>
+                        <div class="principlesElement">
+                            Изображения
+                        </div>
+                        <div class="principlesElement">
+                            Загрузка контена
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </body>   
 </html>
 
