--- a/index.html
+++ b/index.html
@@ -8,18 +8,25 @@
     <!-- Side navigation -->
         <div class="sidenav">
             <h1 href="#">Meile</h1>
-            <div id="sidenavContent">
-                <a class="firstLevel" id="navbarFirstLevel1" href="about.html">О дизайн системе</a>
+            <div class="sidenavWrapper" id="sidenavContent">
+                <a class="firstLevel" id="navbarFirstLevel1" href="/pages/about.html">О дизайн системе</a>
                 <a class="firstLevel" id="navbarFirstLevel2">Цвета</a>
                 <a class="firstLevel" id="navbarFirstLevel3">Типографика</a>
                 <a class="firstLevel" id="navbarFirstLevel4">Сетка</a>
                 <a class="firstLevel"  id="navbarFirstLevel5">Навигация</a>
-                <div id="5secondLevel" hidden>
-                    <a class="secondLevel" id="navbarSecondtLevel5_1">Tabs</a>
-                    <a class="secondLevel" id="navbarSecondtLevel5_2">BreadCrumbs</a>
-                    <a class="secondLevel" id="navbarSecondtLevel5_3">Steps</a>
+                <div id="secondLevel5" hidden>
+                    <a class="secondLevel" id="navbarSecondtLevel5_1" href="/pages/tabs.html">Tabs</a>
+                    <a class="secondLevel" id="navbarSecondtLevel5_2" href="/pages/breadcrumbs.html">BreadCrumbs</a>
+                    <a class="secondLevel" id="navbarSecondtLevel5_3" href="/pages/steps.html">Steps</a>
                 </div>
                 <a class="firstLevel" id="navbarFirstLevel6">Компоненты</a>
+                <div id="secondLevel6" hidden>
+                    <a class="secondLevel" id="navbarSecondtLevel6_1" href="/pages/buttons.html">Buttons</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_2" href="/pages/checkbox.html">Checkbox</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_3" href="/pages/radioButton.html">RadioButton</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_4" href="/pages/modal.html">Modal</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_5" href="/pages/icons.html">Icons</a>
+                </div>
                 <a class="firstLevel" id="navbarFirstLevel7">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8">Загрузка контена</a>
             </div>
@@ -27,14 +34,15 @@
         <div class="page">
             <div class="mainContent">
                 <div class="contentBlock">
-                    <h1>meile design</h1>
+                    <h1>MEILE DESIGN</h1>
                     <p>MEILE — это дизайн-система, состоящая из набора правил и готовых компонентов, <br> которая объединяет в единое целое многообразие сервисов <br>для планирования путешествий.</p>
                 </div>
                 <div class="contentBlock">
                     <h2>Для кого</h2>
                     <div class="manyTexts">
-                        <p>Дизайн-система планирования путешествий создана как для профессионалов<br> 
-                            в области веб-разработки, так и для начинающих специалистов и представляет инструменты и стандарты для создания удобного и функционального сервиса планирования путешествий</p>
+                        <p>Дизайн-система основана на ряде основных принципов, которые направлены 
+                            на создание простого, удобного и интуитивно понятного интерфейса 
+                            для планирования путешествий. </p>
                         <p>Благодаря meile упрощается и ускоряется процесс работы дизайнеров<br> 
                             и фронтенд-разработчиков.</p>
                         <p>Данная дизайн-система предполагает разработку дизайна пользовательского интерфейса с использованием Figma и вёрстку страниц с помощью стандартных средств HTML, CSS и JavaScript.</p>
@@ -46,7 +54,7 @@
                         и различных готовых компонентов, что позволяет нашим цифровым продуктам<br> 
                         быть не только удобными, но и привлекательными.</p>
                     <div class="principlesBlock">
-                        <div class="principlesElement" onclick="window.location.href = '/about.html'">
+                        <div class="principlesElement" onclick="window.location.href = '/pages/about.html' ">
                             О дизайн системе
                         </div>
                         <div class="principlesElement">
@@ -73,8 +81,12 @@
                     </div>
                 </div>
             </div>
+            <div id="footer">
+                <p>© 2023–2024 Университет ИТМО</p>
+                <caption><p>Учебный проект</p></caption>
+            </div>
         </div>
-        
+       
     </body>   
 </html>
 
