checking for pagination

--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
         <div class="sidenav">
             <h1 href="#">Meile</h1>
             <div class="sidenavWrapper" id="sidenavContent">
-                <a class="firstLevel" id="navbarFirstLevel1" href="/pages/about.html">О дизайн системе</a>
+                <a class="firstLevel" id="navbarFirstLevel1" href="./pages/about.html">О дизайн системе</a>
                 <a class="firstLevel" id="navbarFirstLevel2">Цвета</a>
                 <a class="firstLevel" id="navbarFirstLevel3">Типографика</a>
                 <a class="firstLevel" id="navbarFirstLevel4">Сетка</a>
                 <a class="firstLevel"  id="navbarFirstLevel5">Навигация</a>
                 <div id="secondLevel5" hidden>
-                    <a class="secondLevel" id="navbarSecondtLevel5_1" href="/pages/tabs.html">Tabs</a>
-                    <a class="secondLevel" id="navbarSecondtLevel5_2" href="/pages/breadcrumbs.html">BreadCrumbs</a>
-                    <a class="secondLevel" id="navbarSecondtLevel5_3" href="/pages/steps.html">Steps</a>
+                    <a class="secondLevel" id="navbarSecondtLevel5_1" href="./pages/tabs.html">Tabs</a>
+                    <a class="secondLevel" id="navbarSecondtLevel5_2" href="./pages/breadcrumbs.html">BreadCrumbs</a>
+                    <a class="secondLevel" id="navbarSecondtLevel5_3" href="./pages/steps.html">Steps</a>
                 </div>
                 <a class="firstLevel" id="navbarFirstLevel6">Компоненты</a>
                 <div id="secondLevel6" hidden>
-                    <a class="secondLevel" id="navbarSecondtLevel6_1" href="/pages/buttons.html">Buttons</a>
-                    <a class="secondLevel" id="navbarSecondtLevel6_2" href="/pages/checkbox.html">Checkbox</a>
-                    <a class="secondLevel" id="navbarSecondtLevel6_3" href="/pages/radioButton.html">RadioButton</a>
-                    <a class="secondLevel" id="navbarSecondtLevel6_4" href="/pages/modal.html">Modal</a>
-                    <a class="secondLevel" id="navbarSecondtLevel6_5" href="/pages/icons.html">Icons</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_1" href="./pages/buttons.html">Buttons</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_2" href="./pages/checkbox.html">Checkbox</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_3" href="./pages/radioButton.html">RadioButton</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_4" href="./pages/modal.html">Modal</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_5" href="./pages/icons.html">Icons</a>
                 </div>
                 <a class="firstLevel" id="navbarFirstLevel7">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8">Загрузка контена</a>
