--- a/pages/about.html
+++ b/pages/about.html
@@ -15,17 +15,17 @@
                 <a class="firstLevel" id="navbarFirstLevel4">Сетка</a>
                 <a class="firstLevel"  id="navbarFirstLevel5">Навигация</a>
                 <div id="secondLevel5" hidden>
-                    <a class="secondLevel" id="navbarSecondtLevel5_1" href="tabs.html">Tabs</a>
-                    <a class="secondLevel" id="navbarSecondtLevel5_2" href="breadcrumbs.html">BreadCrumbs</a>
-                    <a class="secondLevel" id="navbarSecondtLevel5_3" href="steps.html">Steps</a>
+                    <a class="secondLevel" id="navbarSecondtLevel5_1" href="./tabs.html">Tabs</a>
+                    <a class="secondLevel" id="navbarSecondtLevel5_2" href="./breadcrumbs.html">BreadCrumbs</a>
+                    <a class="secondLevel" id="navbarSecondtLevel5_3" href="./steps.html">Steps</a>
                 </div>
                 <a class="firstLevel" id="navbarFirstLevel6">Компоненты</a>
                 <div id="secondLevel6" hidden>
-                    <a class="secondLevel" id="navbarSecondtLevel6_1" href="buttons.html">Buttons</a>
-                    <a class="secondLevel" id="navbarSecondtLevel6_2" href="checkbox.html">Checkbox</a>
-                    <a class="secondLevel" id="navbarSecondtLevel6_3" href="radioButton.html">RadioButton</a>
-                    <a class="secondLevel" id="navbarSecondtLevel6_4" href="modal.html">Modal</a>
-                    <a class="secondLevel" id="navbarSecondtLevel6_5" href="icons.html">Icons</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_1" href="./buttons.html">Buttons</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_2" href="./checkbox.html">Checkbox</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_3" href="./radioButton.html">RadioButton</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_4" href="./modal.html">Modal</a>
+                    <a class="secondLevel" id="navbarSecondtLevel6_5" href="./icons.html">Icons</a>
                 </div>  
                 <a class="firstLevel" id="navbarFirstLevel7">Изображения</a>
                 <a class="firstLevel" id="navbarFirstLevel8">Загрузка контена</a>
