--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -58,7 +58,7 @@
                             </div>
                             <div class="singleTabWrapper">
                                 <div class="menuTab ">
-                                    <button class="tertiaryButton">Button</button>./
+                                    <button class="tertiaryButton">Button</button>
                                 </div>
                                 <span class="singleTabCaption">Tertiary</span>
                             </div>
