--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             <h1 href="#">Meile</h1>
             <div class="sidenavWrapper" id="sidenavContent">
                 <a class="firstLevel" id="navbarFirstLevel1" href="./pages/about.html">О дизайн системе</a>
-                <a class="firstLevel" id="navbarFirstLevel2">Цвета</a>
-                <a class="firstLevel" id="navbarFirstLevel3">Типографика</a>
-                <a class="firstLevel" id="navbarFirstLevel4">Сетка</a>
+                <a class="firstLevel" id="navbarFirstLevel2" href="./pages/colors.html">Цвета</a>
+                <a class="firstLevel" id="navbarFirstLevel3" href="./pages/typography.html">Типографика</a>
+                <a class="firstLevel" id="navbarFirstLevel4" href="./pages/layout.html">Сетка</a>
                 <a class="firstLevel"  id="navbarFirstLevel5">Навигация</a>
                 <div id="secondLevel5" hidden>
                     <a class="secondLevel" id="navbarSecondtLevel5_1" href="./pages/tabs.html">Tabs</a>
@@ -27,8 +27,8 @@
                     <a class="secondLevel" id="navbarSecondtLevel6_4" href="./pages/modal.html">Modal</a>
                     <a class="secondLevel" id="navbarSecondtLevel6_5" href="./pages/icons.html">Icons</a>
                 </div>
-                <a class="firstLevel" id="navbarFirstLevel7">Изображения</a>
-                <a class="firstLevel" id="navbarFirstLevel8">Загрузка контена</a>
+                <a class="firstLevel" id="navbarFirstLevel7" href="./pages/images.html">Изображения</a>
+                <a class="firstLevel" id="navbarFirstLevel8" href="./pages/loading.html">Загрузка контена</a>
             </div>
         </div>
         <div class="page">
