--- a/pages/steps.html
+++ b/pages/steps.html
@@ -10,14 +10,14 @@
         <h1><a href="../index.html">Meile</a></h1>
         <div class="sidenavWrapper" id="sidenavContent">
             <a class="firstLevel" id="navbarFirstLevel1" href="./about.html">О дизайн системе</a>
-            <a class="firstLevel" id="navbarFirstLevel2">Цвета</a>
-            <a class="firstLevel" id="navbarFirstLevel3">Типографика</a>
-            <a class="firstLevel" id="navbarFirstLevel4">Сетка</a>
-            <a class="firstLevel activeSideNav"  id="navbarFirstLevel5">Навигация</a>
+            <a class="firstLevel" id="navbarFirstLevel2" href="./colors.html">Цвета</a>
+            <a class="firstLevel" id="navbarFirstLevel3" href="./typography.html">Типографика</a>
+            <a class="firstLevel" id="navbarFirstLevel4" href="./layout.html">Сетка</a>
+            <a class="firstLevel"  id="navbarFirstLevel5">Навигация</a>
             <div id="secondLevel5" >
                 <a class="secondLevel" id="navbarSecondtLevel5_1" href="./tabs.html">Tabs</a>
                 <a class="secondLevel" id="navbarSecondtLevel5_2" href="./breadcrumbs.html">BreadCrumbs</a>
-                <a class="secondLevel activeSecondLevelSideNav" id="navbarSecondtLevel5_3" href="./steps.html">Steps</a>
+                <a class="secondLevel" id="navbarSecondtLevel5_3" href="./steps.html">Steps</a>
             </div>
             <a class="firstLevel" id="navbarFirstLevel6">Компоненты</a>
             <div id="secondLevel6" hidden>
@@ -27,12 +27,20 @@
                 <a class="secondLevel" id="navbarSecondtLevel6_4" href="./modal.html">Modal</a>
                 <a class="secondLevel" id="navbarSecondtLevel6_5" href="./icons.html">Icons</a>
             </div> 
-            <a class="firstLevel" id="navbarFirstLevel7">Изображения</a>
-            <a class="firstLevel" id="navbarFirstLevel8">Загрузка контена</a>
+            <a class="firstLevel" id="navbarFirstLevel7" href="./images.html">Изображения</a>
+            <a class="firstLevel" id="navbarFirstLevel8" href="./loading.html">Загрузка контена</a>
         </div>
     </div>
 
-
+    <div class="page">
+        <div class="mainContent">
+            <h1>Steps</h1>
+        </div>
+        <div id="footer">
+            <p>© 2023–2024 Университет ИТМО</p>
+            <caption><p>Учебный проект</p></caption>
+        </div>
+    </div>
        
     </body>         
 </html>
