--- a/index.html
+++ b/index.html
@@ -40,19 +40,14 @@
                 <div class="contentBlock">
                     <h2>Для кого</h2>
                     <div class="manyTexts">
-                        <p>Дизайн-система основана на ряде основных принципов, которые направлены 
-                            на создание простого, удобного и интуитивно понятного интерфейса 
-                            для планирования путешествий. </p>
+                        <p>Дизайн-система планирования путешествий создана как для профессионалов <br>
+                            в области веб-разработки, так и для начинающих специалистов и представляет инструменты и стандарты для создания удобного и функционального сервиса планирования путешествий. </p>
                         <p>Благодаря meile упрощается и ускоряется процесс работы дизайнеров<br> 
                             и фронтенд-разработчиков.</p>
                         <p>Данная дизайн-система предполагает разработку дизайна пользовательского интерфейса с использованием Figma и вёрстку страниц с помощью стандартных средств HTML, CSS и JavaScript.</p>
                     </div>
                 </div>
                 <div class="contentBlock">
-                    <h2>Принципы</h2>
-                    <p>В дизайн-системе используется широкий набор визуальных приемов<br> 
-                        и различных готовых компонентов, что позволяет нашим цифровым продуктам<br> 
-                        быть не только удобными, но и привлекательными.</p>
                     <div class="principlesBlock">
                         <div class="principlesElement" onclick="window.location.href = '/pages/about.html' ">
                             О дизайн системе
