--- a/pages/about.html
+++ b/pages/about.html
@@ -37,10 +37,10 @@
                 <div class="contentBlock">
                     <h1>О дизайн системе</h1>
                     <div class="manyTexts">
-                        <p>Дизайн-система основана на ряде основных принципов, которые направлены 
-                            на создание простого, удобного и интуитивно понятного интерфейса 
+                        <p>Дизайн-система основана на ряде основных принципов, которые направлены<br> 
+                            на создание простого, удобного и интуитивно понятного интерфейса<br> 
                             для планирования путешествий.</p>
-                        <p>MEILE позволяет обеспечить проектирование сайтов, максимально удобных 
+                        <p>MEILE позволяет обеспечить проектирование сайтов, максимально удобных<br>
                             для пользователей, предоставляя информацию о различных аспектах 
                             путешествий, таких как маршруты, транспорт, жилье, достопримечательности, 
                             отзывы и многое другое, а также их планирование.</p>
@@ -67,7 +67,7 @@
                         </li>
                         <li>
                             <p class="aboutListHeader">Гибкость</p>
-                            <p class="aboutListText">Система должна обеспечивать возможность получения обратной связи 
+                            <p class="aboutListText">Система должна обеспечивать возможность получения обратной связи <br> 
                                 от пользователей, чтобы разработчики могли улучшать сервис и делать его ещё более удобным и функциональным. </p>
                             
                         </li>
