--- a/pages/breadcrumbs.html
+++ b/pages/breadcrumbs.html
@@ -46,14 +46,14 @@
                         <div id="design" class="tabcontent" style="display: flex;">
                             <div class="singleTabWrapper">
                                 <div class="menuTab ">
-                                    <p class="breadcrumb">Выбор места</p>
+                                    <p class="breadcrumb">Поиск отелей</p>
                                 </div>
                                 <span class="singleTabCaption">Normal</span>
                             </div>
 
                             <div class="singleTabWrapper">
                                 <div class="menuTab">
-                                    <p class="breadcrumb breadcrumbHover">Оформление</p>
+                                    <p class="breadcrumb breadcrumbHover">Поиск отелей</p>
                                 </div>
                                 <span class="singleTabCaption">Hover</span>
                             </div>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="whenToUseGreen whenToUseGreenBig">
                             <img src="../img//tick.svg">
-                            <p>Хлебные крошки должны начинаться с домашней или корневой страницы,
+                            <p>Хлебные крошки должны начинаться с домашней или корневой страницы,<br>
                                 а заканчиваться — разделом текущей страницы.</p>
                         </div>
 
