--- a/pages/checkbox.html
+++ b/pages/checkbox.html
@@ -105,7 +105,7 @@
                 <div class="contentBlock">
                     <h2>Когда использовать</h2>
                     <p>Чекбокс используется для управления параметром с двумя состояниями.
-                        Используйте его для выбора элементов списка. Чекбокс не запускает действие немедленно. Как правило для этого нужно нажать подтверждающую кнопку. Для немедленного включения какого-то режима в интерфейсе лучше подходит тогл.</p>
+                        Используйте его для выбора элементов списка. Чекбокс не запускает действие немедленно. Как правило для этого нужно нажать подтверждающую кнопку. Для немедленного включения режима в интерфейсе лучше подходит тогл.</p>
                 </div>
 
                 <div class="contentBlock">
