--- a/pages/icons.html
+++ b/pages/icons.html
@@ -43,7 +43,7 @@
                     <h2>Стиль и размер</h2>
                     <div class="manyTexts">
                         <p>Используйте иконки, чтобы ускорить распознавание объекта и привлечь внимание к действию, команде или разделу. Если сомневаетесь в иконке, вероятно, её вообще не нужно использовать.</p>
-                        <p>В дизайн-системе MEILE используются иконки с заливкой. Базовый набор состоит из иконок в стандартном размере 24×24. Они привязаны к пикселям и оптимизированы для этого размера. </p>
+                        <p>В дизайн-системе MEILE используются иконки с заливкой. Базовый набор состоит из иконок в стандартном размере 24×24. Они привязаны к пикселям <br>и оптимизированы для этого размера. </p>
                     </div>
                     <div class="exampleMenuWrapper" style="padding-bottom: 28px;">
                         <img src="../img/icons_example.svg" />
