--- a/pages/tabs.html
+++ b/pages/tabs.html
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                         <div class="singleTabWrapper ">
-                            <div class="menuTab menuTab correctBackground">
+                            <div class="menuTab menuTab correctBackground correctBackBiggerPadding">
                                 <p class="bolderText">Оплата бронирования</p>
                             </div>
                         </div>
