--- a/pages/breadcrumbs.html
+++ b/pages/breadcrumbs.html
@@ -44,14 +44,14 @@
                         </div>
                         
                         <div id="design" class="tabcontent" style="display: flex;">
-                            <div class="singleTabWrapper">
+                            <div class="singleTabWrapper smallerTab">
                                 <div class="menuTab ">
                                     <p class="breadcrumb">Поиск отелей</p>
                                 </div>
                                 <span class="singleTabCaption">Normal</span>
                             </div>
 
-                            <div class="singleTabWrapper">
+                            <div class="singleTabWrapper smallerTab">
                                 <div class="menuTab">
                                     <p class="breadcrumb breadcrumbHover">Поиск отелей</p>
                                 </div>
@@ -97,7 +97,7 @@
                     <h2>Область нажатия</h2>
                     <p>Делайте кликабельную область большого размера, чтобы в неё проще было попасть курсором.</p>
                     <div class="exampleMenuWrapper noCaptions">
-                        <div class="singleTabWrapper">
+                        <div class="singleTabWrapper marginTop8" >
                             <div class="menuTab ">
                                 <p class="breadcrumb">Поиск отелей</p>
                             </div>
