--- a/pages/tabs.html
+++ b/pages/tabs.html
@@ -87,7 +87,7 @@
                 <div class="contentBlock">
                     <h2>Когда использовать</h2>
                     <p>Инструмент навигации — переключают разделы или типы контента на странице. 
-                        Хорошо, если текст будет коротким и лаконичным, а табы — примерно одинаковой длины.</p>
+                        Хорошо, если текст будет лаконичным, а табы — примерно одинаковой длины.</p>
                     <div class="principlesBlock">
                         <div class="whenToUseGreen">
                             <img src="../img//tick.svg">
@@ -136,12 +136,7 @@
                         <p>При наведении полоса у пункта окрашивается в Main_grey/50.</p>
                     </div>
                     <div class="exampleMenuWrapper">
-                        <div class="singleTabWrapper">
-                            <span class="singleTabCaption correct">Правильно</span>
-                            <div class="menuTab menuTab__hover">
-                                <p class="bolderText">Покупка билетов</p>
-                            </div>
-                        </div>
+                        <img src="../img/tabsCursor.svg">
                     </div>
                 </div>
                 <div class="contentBlock">
@@ -149,7 +144,7 @@
                     <p>Делайте кликабельную область большого размера, чтобы в неё проще было попасть курсором.</p>
                     <div class="exampleMenuWrapper noCaptions">
                         <div class="singleTabWrapper">
-                            <div class="menuTab menuTab__selected">
+                            <div class="menuTab menuTab__selected marginTop8">
                                 <p class="bolderText">Выбор места</p>
                             </div>
                         </div>
@@ -159,7 +154,7 @@
                             </div>
                         </div>
                         <div class="singleTabWrapper">
-                            <div class="menuTab menuTab">
+                            <div class="menuTab menuTab marginTop8">
                                 <p class="bolderText">Оплата бронирования</p>
                             </div>
                         </div>  
