--- a/pages/typography.html
+++ b/pages/typography.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="manyTexts paddingBottom">
                         <P>Этот шрифт используются в 3 основных начертания:</P>
-                        <ul>
+                        <ul class="ulWithDashes">
                             <li>Bold — для заголовков;</li>
                             <li>Medium — для акцентного шрифта;</li>
                             <li>Book  — для набора основного текста.</li>
