--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <p>Данная дизайн-система предполагает разработку дизайна пользовательского интерфейса с использованием Figma и вёрстку страниц с помощью стандартных средств HTML, CSS и JavaScript.</p>
                     </div>
                 </div>
-                <div class="contentBlock">
+                <div class="contentBlock" style="padding-bottom: 40px;">
                     <div class="principlesBlock">
                         <div class="principlesElement" onclick="window.location.href = '/pages/about.html' ">
                             О дизайн системе
@@ -74,6 +74,10 @@
                             Загрузка контена
                         </div>
                     </div>
+                </div>
+                <div class="contentBlock LinkBlock">
+                    <img src="./img/figmaLogo.svg">
+                    <a href="https://www.figma.com/file/J3PAQy0cyd1QbQ9SkZKDGa/MEILE-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD-%D1%81%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B0?type=design&node-id=0-1&mode=design&t=zRWtMkBnSO1BRoYR-0"><p>Дизайн-система meile</p></a>
                 </div>
             </div>
             <div id="footer">
