--- a/pages/about.html
+++ b/pages/about.html
@@ -76,8 +76,8 @@
                 </div>
                 <div class="contentBlock">
                     <h2>Развитие</h2>
-                    <div class="manyTexts">
-                        <p>Чтобы meile дизайн-система оставалась актуальной и современной, необходимо следить за новыми тенденциями в области дизайна и технологий. Поэтому планируется продолжение работы над новыми функциями и возможностями, чтобы сделать процесс планирования путешествий ещё более удобным и эффективным.</p>
+                    <div class="manyTexts developmentTexts">
+                        <p>Чтобы MEILE дизайн-система оставалась актуальной и современной, необходимо следить за новыми тенденциями в области дизайна и технологий. Поэтому планируется продолжение работы над новыми функциями и возможностями, чтобы сделать процесс планирования путешествий ещё более удобным и эффективным.</p>
                         <p>Вы можете связаться с разработчиками<br><a href="#">gvv55221133@gmail.com</a> — Головин Валерий<br><a href="#">ekkatterinnka@gmail.com</a> — Морозова Екатерина<br><a href="#">nast00p@gmail.com</a> — Прокофьева Анастасия</p>
                         <p>Мы будем рады получить от Вас обратную связь!</p>
                     </div>
