--- a/pages/images.html
+++ b/pages/images.html
@@ -36,6 +36,54 @@
             <div class="mainContent">
                 <div class="contentBlock">
                     <h1>Изображения</h1>
+                    <div class="manyTexts">
+                        <p>Использование изображений, графики и видео может облегчить понимание контента для многих людей, особенно для людей с когнитивными нарушениями. Они также могут служить подсказками, которые используют люди с нарушениями зрения, чтобы ориентироваться в контенте.</p>
+                        <p>Однако вам всегда следует предоставлять альтернативу мультимедийным материалам, чтобы люди, которые не могут воспринимать визуальную информацию, не пропустили тот же контент.</p>
+                    </div>
+                </div>
+                <div class="contentBlock">
+                    <h2>Принципы</h2>
+                    <div class="imagesPrinciplesWrapper">
+                        <p>Фотографии должны быть в соответствующем задаче
+                            цифровом разрешении.</p>
+                        <img src="../img/images_1.png"> 
+                    </div>
+                    <div class="imagesPrinciplesWrapper">
+                        <p>Фотографии не должны быть плохого качества
+                            (смазанные, темные, засвеченные).</p>
+                        <img src="../img/images_2.png"> 
+                    </div>
+                    <div class="imagesPrinciplesWrapper">
+                        <p>Фотографии не должны быть с брендами, официально незаявленными<br>как партнеры.</p>
+                        <img src="../img/images_3.png"> 
+                    </div>
+                    <div class="imagesPrinciplesWrapper">
+                        <p>Фотографии не должны быть с искаженными углами
+                            съемки.</p>
+                        <img src="../img/images_4.png"> 
+                    </div>
+                </div>
+                <div class="contentBlock">
+                    <div class="manyTexts">
+                        <h2>Формат изображения</h2>
+                        <P>Для веб-приложений используется много разных форматов изображений.<br>Поэтому важно пользоваться такими форматами правильно.<br>Рекомендуется использовать три формата:</P>
+                        <ul class="ulWithDashes">
+                            <li>webp. Один из новейших форматов. Его лучше всего использовать<br>для растровых изображений. В таком формате получается идеальное соотношения веса изображения к его качеству. Однако есть небольшая вероятность, что изображение будет открыто в старом браузере,<br>который не поддерживает данный формат.</li>
+                            <li>png. Его можно использоваться также, как и webp, просто второй более новый и оптимизированный. Скорее всего, при использовании такого формата вы<br>не встретитесь с проблемами старых браузеров, поскольку png формат один из самых старых форматов изображений.</li>
+                            <li>svg. Векторный формат. Самые простые изображения, иконки, логотип: это все лучше делать в векторном формате. Иными словами, рекомендуется выбирать векторный формат взамен растрового, если есть такая возможность.</li>
+                        </ul>
+                    </div>
+                </div>
+               
+                <div class="manyTexts">
+                    <h2>Вес изображения</h2>
+                    <div class="manyTexts">
+                        <p>Важно учитывать вес загружаемой картинки, а также количество таких «тяжелых» картинок.</p>
+                        <p>В современном мире большинство людей посещают сайты со смартфонов, либо<br>с домашних компьютеров. Нужно отметить, что большинство таких устройств имеют размер экрана ДО 1920х1080. Таким образом, зачастую, загрузка огромных картинок совершенно не оправдана.</p>
+                        <p>Также, существуют определенные форматы изображений созданные специально для веб-приложений, например, png или webp. Такие форматы, а особенно webp, умеет оптимально сжимать картинку без потери качества. </p>
+                        <p>Помимо этого, мы рекомендуем загружать картинки в самую последнюю<br>очередь — после каркаса страницы и стилей. Таким образом, процесс загрузки страницы будет более наглядным для пользователя.</p>
+                        <p>Если не получается избежать загрузки больших картинок, мы рекомендуем использовать сниппеты для таких изображений. Сниппет — более маленькое изображение, и возможно, в более оптимальном формате. При нажатии можно загрузить нужную «тяжелую» картинку.</p>
+                    </div>                    
                 </div>
             </div>
             <div id="footer">
