--- a/pages/layout.html
+++ b/pages/layout.html
@@ -36,6 +36,53 @@
             <div class="mainContent">
                 <div class="contentBlock">
                     <h1>Сетка</h1>
+                    <div class="manyTexts">
+                        <p>Сетка — это система организации объектов в макете, основанная на колонках, рядах и отступах между ними.</p>
+                        <p>Колонка — вертикальная направляющая сетки. То есть вся сетка поделена вертикально на равные части, которые называются колонки. Горизонтальное деление сетки состоит из рядов также расположенных равноудаленно <br>друг от друга.</p>
+                        <p>Используйте сетку из 12 колонок. Также допускается использование нескольких колонок. </p>
+                    </div>
+                    <div class="exampleMenuWrapper">
+                        <img src="../img/layout_1.svg" />
+                    </div>
+                    <div class="exampleMenuWrapper">
+                        <img src="../img/layout_2.svg" />
+                    </div>
+                    <div class="exampleMenuWrapper">
+                        <img src="../img/layout_3.svg" />
+                    </div>
+                    <div class="exampleMenuWrapper">
+                        <img src="../img/layout_4.svg" />
+                    </div>
+                    <div class="exampleMenuWrapper paddingBot28">
+                        <img src="../img/layout_5.svg" />
+                    </div>
+                    <div class="manyTexts">
+                        <p>Расстояние между колонками должно быть кратно модулю. Рекомендуется, чтобы<br>и размер самих колонок тоже был кратным модулю.</p>
+                        <p>Сетка не должна «упираться» в края экрана. У сетки должны быть внешние отступы, которые должны быть больше отступов между колонками, а также были кратны модулю.</p>
+                        <p>Если достигнута максимальная ширина сетки — увеличиваются только отступы<br>от края экрана.</p>
+                    </div>
+                </div>
+                <div class="contentBlock">
+                    <h2>Модуль</h2>
+                    <div class="manyTexts">
+                        <p>Модуль — минимальная единица измерения в дизайн системе. Соотвественно,<br>все величины, которые будут выбраны в дизайне должны быть кратны модулю, либо равны ему.</p>
+                        <p>Используйте модуль 8 пикселей. Это означает, что все размеры в интерфейсы должны быть кратны восьми. При таком модуле, получается достаточно гибкий интерфейс, чтобы можно было органично выбирать все размеры в пикселях,<br>при этом не сильно путаясь во всех числах.</p>
+                        <p>Используйте сетку из 12 колонок. Также допускается использование нескольких колонок. </p>
+                    </div>
+                    <div class="exampleMenuWrapper paddingBot28">
+                        <img src="../img/layout_module1.svg" />
+                    </div>
+                    <div class="manyTexts">
+                        <p>Тем не менее, необязательно все величины обязательно должны быть кратны 8.</p>
+                        <p>Было введено понятие полмодуля (4px) —  его можно использовать в размерах до 50 пикселей. То есть, возможно использование, например, расстояний, которые будут равны 2.5m или 1.5m.</p>
+                    </div>
+                    <div class="exampleMenuWrapper paddingBot28">
+                        <img src="../img/layout_module2.svg" />
+                    </div>
+                    <p>Также возможно использование четверти модуля (2px) при выборе шрифта или отступов, но рекомендуется использовать не меньше половины модуля.</p>
+                    <div class="exampleMenuWrapper paddingBot28">
+                        <img src="../img/layout_module3.svg" />
+                    </div>
                 </div>
             </div>
             <div id="footer">
