--- a/pages/typography.html
+++ b/pages/typography.html
@@ -36,7 +36,7 @@
             <div class="mainContent">
                 <div class="contentBlock">
                     <h1>Типографика</h1>
-                    <p>Ясное распределение шрифтовых размеров и стилей поможет упорядочить и систематизировать информацию, что упростит навигацию в интерфейсе.</p>
+                    <p>Ясное распределение шрифтовых размеров и стилей поможет упорядочить <br>и систематизировать информацию, что упростит навигацию в интерфейсе.</p>
                 </div>
                 <div class="contentBlock">
                     <h2>Шрифтовые стили</h2>
@@ -85,30 +85,34 @@
                                     <h1>Заголовок h1</h1>
                                     <h2>Заголовок H2</h2>
                                     <h3>Заголовок H3</h3>
+                                    <p class="last">Основной текст</p>
                                 </div>
                                 <div class="rightWrapper">
                                     <p>Size</p>
                                     <p>60</p>
                                     <p>40</p>
                                     <p>28</p>
+                                    <p>20</p>
                                 </div>
                                 <div class="rightWrapper">
                                     <p>Height</p>
                                     <p>64</p>
                                     <p>44</p>
                                     <p>36</p>
+                                    <p>24</p>
                                 </div>
                             </div>
                         </div>
 
                         
                         <div id="html" class="tabcontent typoMenu">
-                            <div class="mainTypoWrapper mainTypoExamples">
+                            <div  class=" mainTypoWrapper mainTypoExamples ">
                                 <div class="leftWrapper">
                                     <p>Font</p>
                                     <h1 id="mobileH1">Заголовок h1</h1>
                                     <h2 id="mobileH2">Заголовок H2</h2>
                                     <h3 id="mobileH3">Заголовок H3</h3>
+                                    <p class="last">Основной текст</p>
                                 </div>
                                 <div class="mobile rightWrapper ">
                                 </div>
@@ -117,12 +121,14 @@
                                     <p>36</p>
                                     <p>24</p>
                                     <p>20</p>
+                                    <p>14</p>
                                 </div>
                                 <div class="rightWrapper mobile">
                                     <p>Height</p>
                                     <p>44</p>
                                     <p>28</p>
                                     <p>26</p>
+                                    <p>16</p>
                                 </div>
                             </div>
                         </div>
